fix new statuses not showing

--- a/src/app/features/project/containers/project-workflow/project-workflow.component.scss
+++ b/src/app/features/project/containers/project-workflow/project-workflow.component.scss
@@ -7,7 +7,7 @@
 kanban-app {
 	padding: 20px 20px 30px;
 	/** minus top panel */
-	height: calc(100% - 110px);
+	height: calc(100% - 70px);
 	overflow-x: auto;
 	box-sizing: border-box;
 }
